--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,5 +49,5 @@ jobs:
       steps:
         - uses: anmol098/waka-readme-stats@master
           with:
-            WAKATIME_API_KEY: ${{ secrets.WAKA }}
+            WAKATIME_API_KEY: ${{ secrets.WAKATIME }}
             GH_TOKEN: ${{ secrets.GHTOKEN }}
